Fix issue with SiteOrigin Page Builder (Editor), increase z-index so Post Snippets Insert box opens on top of the editor

--- a/assets/post-snippets.css
+++ b/assets/post-snippets.css
@@ -70,7 +70,7 @@
 
 
 /** Fix for when editors (TinyMCE Advanced) stack above the PS dialog **/
-.ui-dialog { z-index: 1000 !important ;}
+.ui-dialog { z-index: 10000000 !important ;}
 
 #post-snippets-dialog label {
 	width: 60px;
